--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
 				<configuration>
 				<cloudHubDeployment>
 		            <uri>https://anypoint.mulesoft.com</uri>
-		            <muleVersion>${mule.version}</muleVersion>
-		            <username>${anypoint.username}</username>
-		            <password>${anypoint.password}</password>
+		            <muleVersion>4.3.0</muleVersion>
+		            <username>naveengalipelli2</username>
+		            <password>Naveen$123</password>
 		            <applicationName>MyRepo</applicationName>
-		            <environment>${anypoint.environment}</environment>
+		            <environment>Sandbox</environment>
 		            <properties>
 		                <key>value</key>
 		            </properties>
