--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
 				<cloudHubDeployment>
 		            <uri>https://anypoint.mulesoft.com</uri>
 		            <muleVersion>4.3.0</muleVersion>
-		            <username>naveengalipelli2</username>
-		            <password>Naveen$123</password>
+		            <username>${anypoint.username}</username>
+		            <password>${anypoint.password}</password>
 		            <applicationName>MyRepo</applicationName>
-		            <environment>Sandbox</environment>
+		            <environment>${anypoint.environment}</environment>
 		            <objectStoreV2>true</objectStoreV2>
 		            <properties>
 		                <key>value</key>
